--- a/app/src/main/res/values-zh-rCN/dialogs.xml
+++ b/app/src/main/res/values-zh-rCN/dialogs.xml
@@ -4,14 +4,14 @@
     //Changelog Dialog
 
     <string name="changelog_text">
-        &lt;b>For informations about the handling there is a help dialog (Menu -> More -> Help).&lt;/b>&lt;br>&lt;br>
+        &lt; b>有关处理的信息，有一个帮助对话框（菜单 - >更多 - >帮助）。&lt; /b>&lt;br>&lt;br>
 
-        &lt;b>v 4.4&lt;/b>&lt;br>&lt;br>
-        - fix: save screenshot&lt;br>
-        - fix: saving entries containing an apostrophe&lt;br>
-        - fix: option to restart app to apply swipe gesture&lt;br>
-        - new: http basic authentication&lt;br>
-        - improved: behavior of tab preview/behavior&lt;br>
+         &lt; b&gt; v 4.4&lt; br&gt;&lt; br&gt;&lt; br&gt;
+         - 修复：保存截图&lt;br>
+         - 修复：保存包含撇号的条目
+         - 修复：选项重新启动应用程序以应用滑动手势&lt;br>
+         - 新的：http基本认证&lt;br>
+         - 改进：选项卡预览/行为的行为&lt;br>
     </string>
 
 
@@ -19,79 +19,77 @@
 
     <string name="about_title">Copyright © 2017  by Gaukler Faun</string>
     <string name="about_text">
-        For more information visit the project site on github: https://github.com/scoute-dich/Browser&lt;br>&lt;br>
+        有关更多信息，请访问github上的项目网站：https：//github.com/scoute-dich/Browser&lt;br>&lt;br>
 
-        This program is free software: you can redistribute it and/or modify
-        it under the terms of the GNU General Public License as published by
-        the Free Software Foundation, either version 3 of the License, or
-        (at your option) any later version.
+         此程序是免费软件：您可以重新分配和/或修改
+         它根据GNU通用公共许可证的条款发布
+         自由软件基金会，版本3的许可证，或
+         （根据您的选择）任何更高版本。
 
-        This program is distributed in the hope that it will be useful,
-        but WITHOUT ANY WARRANTY; without even the implied warranty of
-        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-        GNU General Public License for more details.
+         这个程序是分发的，希望它是有用的，
+         但不提供任何保证; 甚至没有隐含的保证
+         适销性或适用于特定目的。 见
+         更多细节，GNU通用公共许可证。
 
-        You should have received a copy of the GNU General Public License
-        along with this program.  If not, see http://www.gnu.org/licenses.
+         您应该已经收到GNU通用公共许可证的副本
+         以及这个程序。 如果没有，请参阅http://www.gnu.org/licenses。
     </string>
 
 
     //Help Dialog
 
-    <string name="help_lists_title">&lt;b>The lists:&lt;/b></string>
-    <string name="help_lists">Every list has a context menu, which you can reach by long pressing an item. Lists can be cleared with one click
-        (Menu). You can sort lists by title or date. You can also search for entries in the lists.&lt;br>&lt;br>
+    <string name="help_lists_title">&lt;b>列表:&lt;/b></string>
+    <string name="help_lists">每个列表都有一个上下文菜单，您可以通过长按一个项目来达到。 列表可以一键清除
+         （菜单）。 您可以按标题或日期排序列表。 您也可以搜索列表中的条目。&lt;br>&lt;br>
+         &lt;i>书签：&lt;/i>一如既往 - 保存您最喜欢的网站，以便更快速的访问。 您也可以将书签设置为
+         点击星号启动。 您也可以将空页设置为起始页（菜单 - >空页）。&lt;br>&lt;br>
+         &lt;i> 稍后阅读：&lt;/i>在这里，您可以保存网站，如果您想随时阅读它们，如果他们不
+         重要的是成为书签。&lt; br&gt;&lt; br&gt;
+         &lt;i>历史记录：&lt;/i>您的浏览器历史记录。&lt;br>&lt;br>
+         &lt;i> 密码库：&lt;/i>此处可以从网站保存（加密）登录数据。 如果要删除输入
+         退出时登录数据，必须在设置中启用“清除出口上的Cookie”。</string>
 
-        &lt;i>Bookmark:&lt;/i> as always - save your favorite websites for a faster access. You can also set a bookmark as
-        startpage by clicking the star. You can also set an empty page as startpage (Menu -> Empty page).&lt;br>&lt;br>
-        &lt;i>readLater:&lt;/i> here you can save websites if you want to read them anytime later, if they are not
-        important enough to be a bookmark.&lt;br>&lt;br>
-        &lt;i>History:&lt;/i> well, your browser history.&lt;br>&lt;br>
-        &lt;i>passStorage:&lt;/i> here you can save (encrypted) login data from websites. If you want to delete entered
-        login data on exit, you must enable \"clear cookies on exit\" in the settings.</string>
-
-    <string name="help_toolbar_title">&lt;b>Toolbar:&lt;/b></string>
+    <string name="help_toolbar_title">&lt;b>工具栏:&lt;/b></string>
     <string name="help_toolbar">
-        &lt;i>Swipe:&lt;/i> to the left to open your bookmarks and to the right to open your readLater
-        list. Swipe to top to close the app. This works everywhere.&lt;br>&lt;br>
-        &lt;i>Click (only in the browser):&lt;/i> you can enter a search term (see below) or a url. By pressing \"enter\" or
-        the magnifier icon, the website will load.&lt;br>&lt;br>
-        &lt;i>Long click (only in the browser):&lt;/i> opens the tab preview (see below).&lt;br>&lt;br>
-        &lt;i>History (only in the browser):&lt;/i> opens a list of the last visited websites. Long pressing reloads the website.</string>
+        &lt;i>向左滑动：&lt;/i> 打开您的书签并右键打开您的稍后阅读
+            名单。 滑动到顶部关闭应用程序。 这无处不在。&lt;br&gt;&lt;br>
+             &lt;i>点击（仅在浏览器中）：您可以输入搜索字词（见下文）或网址。 按“输入”或
+             放大镜图标，网站将加载。&lt;br>&lt;br>
+             &lt;i>长按（仅在浏览器中）：&lt;/i> 打开选项卡预览（见下文）。&lt;br>&lt;br>
+             &lt;i>历史记录（仅在浏览器中）：&lt;/i> 打开最后访问的网站的列表。 长按重新加载网站。</string>
 
-    <string name="help_tabs_title">&lt;b>Tab (preview):&lt;/b></string>
+    <string name="help_tabs_title">&lt;b>选项卡（预览）:&lt;/b></string>
     <string name="help_tabs">
-        To open a tab simply click on the preview. If you long press on a preview your favorite will open in this tab.
-        The opened tab is highlighted. Clicking the close button resets the tab. You can swipe left and right to switch the tabs.</string>
+        要打开标签，只需点击预览。 如果您长时间按预览，您的喜爱将在此选项卡中打开。
+    打开的选项卡突出显示。 单击关闭按钮将重置该选项卡。 您可以向左和向右滑动以切换选项卡。</string>
 
-    <string name="help_menu_title">&lt;b>Menu:&lt;/b></string>
+    <string name="help_menu_title">&lt;b>菜单:&lt;/b></string>
     <string name="help_menu">
-        &lt;i>Save website:&lt;/i> you can save the website to your bookmark, readLater or passStorage list or
-        save a screenshot of the whole website.&lt;br>&lt;br>
-        &lt;i>Share website:&lt;/i> you can share the screenshot of a website, share the link as text or copy the link
-        to the clipboard.&lt;br>&lt;br>
-        &lt;i>Search on site:&lt;/i> search for text on any website.&lt;br>&lt;br>
-        &lt;i>Open passStorage:&lt;/i> open your login data list.&lt;br>&lt;br>
-        &lt;i>Open download directory:&lt;/i> opens the download directory to show, share, rename or delete files.&lt;br>&lt;br>
-        &lt;i>Settings (popup dialog):&lt;/i> Here you can overwrite the default settings for a short time. These settings
-        will get lost at the next app start. By clicking the red cross you can also add websites to a whitelist for javascript.
-        They will be marked with a \"green check icon\". Javascript will then always be allowed for these websites (even after
-        restarting the app). To open the main settings screen, click on \"Settings\" at the bottom of the popup dialog.&lt;br>&lt;br>
-        &lt;i>Settings:&lt;/i> In the settings you can configure the behavior of the app, some privacy and
-        security settings. At the app start these settings will always be loaded.</string>
+        &lt;i>保存网站：&lt;/i>您可以将网站保存到您的书签，稍后阅读或密码库列表或
+        保存整个网站的屏幕截图。&lt;br>&lt;br>
+        &lt;i>分享网站：&lt;/i>您可以分享网站的屏幕截图，分享链接作为文本或复制链接
+        到剪贴板。&lt; br&gt;&lt; br&gt;
+        &lt;i>在网站上搜索：&lt;/i>搜索任何网站上的文字。&lt;br>&lt;br>
+        &lt;i>打开密码库：打开您的登录数据列表。&lt;br>&lt;br>
+        &lt;i>打开下载目录：&lt;/i>打开下载目录以显示，共享，重命名或删除文件。&lt;br>&lt;br>
+        &lt; i]设置（弹出式对话框）：&lt;/i>您可以在短时间内覆盖默认设置。这些设置
+        将在下一个应用程序开始迷失。点击红十字，您也可以将网站添加到白名单中。
+        它们将被标记为“绿色检查图标”。这些网站将始终允许使用Javascript（甚至之后）
+        重新启动应用程序）。要打开主设置屏幕，请单击弹出对话框底部的“设置”。&lt;br>
+        &lt; i]设置：&lt;/i>在设置中，您可以配置应用程序的行为，一些隐私和
+        安全设定。在应用程序启动时，将始终加载这些设置。</string>
 
-    <string name="help_search_title">&lt;b>Search:&lt;/b></string>
+    <string name="help_search_title">&lt;b>搜索:&lt;/b></string>
     <string name="help_search">
-        You can set your preferred search engine and the language for Wikipedia in the settings. You can search direct on different
-        sites by clicking the list symbol right of the magnifier icon. The supported sites you can also configure in the settings.</string>
+        您可以在设置中设置您的首选搜索引擎和维基百科的语言。 您可以直接搜索不同的点击放大镜图标右侧的列表符号的网站。 您还可以在设置中配置支持的站点。</string>
 
 
     //String arrays
 
     <string-array name="listArrayFont">
-        <item>Small (70%)</item>
-        <item>Normal (100%)</item>
-        <item>Big (130%)</item>
+        <item>小 (70%)</item>
+        <item>中 (100%)</item>
+        <item>大 (130%)</item>
     </string-array>
 
     <string-array name="listValuesFont">
@@ -106,6 +104,7 @@
         <item>Google (encrypted)</item>
         <item>MetaGer</item>
         <item>Startpage</item>
+        <item>百度</item>
     </string-array>
 
     <string-array name="listValuesSearchEngine">
@@ -114,23 +113,26 @@
         <item>https://encrypted.google.com/search?q=</item>
         <item>https://metager.de/meta/meta.ger3?focus=web&amp;eingabe=</item>
         <item>https://startpage.com/do/search?query=</item>
+        <item>https://www.baidu.com/s?wd=</item>
     </string-array>
 
     <string-array name="listArrayWikiLang">
-        <item>English</item>
-        <item>German</item>
+        <item>英语</item>
+        <item>德语</item>
+        <item>中文</item>
     </string-array>
 
     <string-array name="listValuesWikiLang">
         <item>en</item>
         <item>de</item>
+        <item>zh</item>
     </string-array>
 
     <string-array name="listArrayOrientation">
-        <item>Auto rotate (sensor)</item>
-        <item>Auto rotate (device)</item>
-        <item>Portrait</item>
-        <item>Landscape</item>
+        <item>自动旋转（传感器）</item>
+        <item>自动旋转（装置）</item>
+        <item>肖像</item>
+        <item>景观</item>
     </string-array>
 
     <string-array name="listValuesOrientation">
@@ -141,9 +143,9 @@
     </string-array>
 
     <string-array name="listArrayCookies">
-        <item>Accept all cookies</item>
-        <item>Accept all except 3. party cookies</item>
-        <item>Accept no cookies</item>
+        <item>接受所有的cookies</item>
+        <item>接受所有（除3方Cookie）</item>
+        <item>接受没有cookies</item>
     </string-array>
 
     <string-array name="listValuesCookies">
@@ -153,10 +155,10 @@
     </string-array>
 
     <string-array name="listArrayFull">
-        <item>Hide statusbar</item>
-        <item>Hide toolbar</item>
-        <item>Hide both</item>
-        <item>Hide nothing</item>
+        <item>隐藏状态栏</item>
+        <item>隐藏工具栏</item>
+        <item>两个栏都隐藏</item>
+        <item>不隐藏</item>
     </string-array>
 
     <string-array name="listValuesFull">
@@ -171,10 +173,10 @@
     <string name="def_rot">device</string>
 
     <string-array name="listArrayTabMain">
-        <item>Browser</item>
-        <item>Bookmarks</item>
-        <item>readLater</item>
-        <item>History</item>
+        <item>浏览器</item>
+        <item>书签</item>
+        <item>稍后阅读</item>
+        <item>历史</item>
     </string-array>
 
     <string-array name="listValuesTabMain">
@@ -185,16 +187,16 @@
     </string-array>
 
     <string-array name="listArrayTheme">
-        <item>Green (green|orange)</item>
-        <item>Blue (blue|orange)</item>
-        <item>Pink (pink|orange)</item>
-        <item>Purple (purple|orange)</item>
-        <item>Teal (teal|orange)</item>
-        <item>Red (red|blue)</item>
-        <item>Orange (orange|blue)</item>
-        <item>Brown (brown|orange)</item>
-        <item>Grey (grey|blue)</item>
-        <item>Dark (grey|grey)</item>
+        <item>绿色（绿色|橙色）</item>
+        <item>蓝色（蓝色|橙色）</item>
+        <item>粉色（粉色|橙色）</item>
+        <item>紫色（紫色|橙色）</item>
+        <item>蓝绿色（蓝绿色|橙色）</item>
+        <item>红色（红色|蓝色）</item>
+        <item>橙色（橙色|蓝色）</item>
+        <item>棕色（棕色|橙色）</item>
+        <item>灰色（灰色|蓝色）</item>
+        <item>黑暗（灰色|灰色）</item>
     </string-array>
 
     <string-array name="listValuesTheme">
