Add more translate string 2

--- a/app/src/main/res/values-zh-rCN/dialogs.xml
+++ b/app/src/main/res/values-zh-rCN/dialogs.xml
@@ -4,7 +4,7 @@
     //Changelog Dialog
 
     <string name="changelog_text">
-        &lt; b>有关处理的信息，有一个帮助对话框（菜单 - >更多 - >帮助）。&lt; /b>&lt;br>&lt;br>
+        &lt;b>有关处理的信息，有一个帮助对话框（菜单 - >更多 - >帮助）。&lt;/b>&lt;br>&lt;br>
 
          &lt; b&gt; v 4.4&lt; br&gt;&lt; br&gt;&lt; br&gt;
          - 修复：保存截图&lt;br>
@@ -44,40 +44,33 @@
          &lt;i>书签：&lt;/i>一如既往 - 保存您最喜欢的网站，以便更快速的访问。 您也可以将书签设置为
          点击星号启动。 您也可以将空页设置为起始页（菜单 - >空页）。&lt;br>&lt;br>
          &lt;i> 稍后阅读：&lt;/i>在这里，您可以保存网站，如果您想随时阅读它们，如果他们不
-         重要的是成为书签。&lt; br&gt;&lt; br&gt;
+         重要的是成为书签。&lt;br&gt;&lt;br&gt;
          &lt;i>历史记录：&lt;/i>您的浏览器历史记录。&lt;br>&lt;br>
-         &lt;i> 密码库：&lt;/i>此处可以从网站保存（加密）登录数据。 如果要删除输入
-         退出时登录数据，必须在设置中启用“清除出口上的Cookie”。</string>
+         &lt;i> 密码库：&lt;/i>此处可以从网站保存（加密）登录数据。 如果要删除输入退出时登录数据，必须在设置中启用“清除出口上的Cookie”。</string>
 
     <string name="help_toolbar_title">&lt;b>工具栏:&lt;/b></string>
     <string name="help_toolbar">
-        &lt;i>向左滑动：&lt;/i> 打开您的书签并右键打开您的稍后阅读
-            名单。 滑动到顶部关闭应用程序。 这无处不在。&lt;br&gt;&lt;br>
-             &lt;i>点击（仅在浏览器中）：您可以输入搜索字词（见下文）或网址。 按“输入”或
-             放大镜图标，网站将加载。&lt;br>&lt;br>
+        &lt;i>向左滑动：&lt;/i> 打开您的书签并右键打开您的稍后阅读名单。 滑动到顶部关闭应用程序。 这无处不在。&lt;br&gt;&lt;br>
+             &lt;i>点击（仅在浏览器中）：您可以输入搜索字词（见下文）或网址。 按“输入”或放大镜图标，网站将加载。&lt;br>&lt;br>
              &lt;i>长按（仅在浏览器中）：&lt;/i> 打开选项卡预览（见下文）。&lt;br>&lt;br>
              &lt;i>历史记录（仅在浏览器中）：&lt;/i> 打开最后访问的网站的列表。 长按重新加载网站。</string>
 
     <string name="help_tabs_title">&lt;b>选项卡（预览）:&lt;/b></string>
     <string name="help_tabs">
-        要打开标签，只需点击预览。 如果您长时间按预览，您的喜爱将在此选项卡中打开。
-    打开的选项卡突出显示。 单击关闭按钮将重置该选项卡。 您可以向左和向右滑动以切换选项卡。</string>
+        要打开标签，只需点击预览。 如果您长时间按预览，您的喜爱将在此选项卡中打开。打开的选项卡突出显示。 单击关闭按钮将重置该选项卡。 您可以向左和向右滑动以切换选项卡。</string>
 
     <string name="help_menu_title">&lt;b>菜单:&lt;/b></string>
     <string name="help_menu">
-        &lt;i>保存网站：&lt;/i>您可以将网站保存到您的书签，稍后阅读或密码库列表或
-        保存整个网站的屏幕截图。&lt;br>&lt;br>
-        &lt;i>分享网站：&lt;/i>您可以分享网站的屏幕截图，分享链接作为文本或复制链接
-        到剪贴板。&lt; br&gt;&lt; br&gt;
+        &lt;i>保存网站：&lt;/i>您可以将网站保存到您的书签，稍后阅读或密码库列表或保存整个网站的屏幕截图。&lt;br>&lt;br>
+        &lt;i>分享网站：&lt;/i>您可以分享网站的屏幕截图，分享链接作为文本或复制链接到剪贴板。&lt;br&gt;&lt;br&gt;
         &lt;i>在网站上搜索：&lt;/i>搜索任何网站上的文字。&lt;br>&lt;br>
         &lt;i>打开密码库：打开您的登录数据列表。&lt;br>&lt;br>
         &lt;i>打开下载目录：&lt;/i>打开下载目录以显示，共享，重命名或删除文件。&lt;br>&lt;br>
-        &lt; i]设置（弹出式对话框）：&lt;/i>您可以在短时间内覆盖默认设置。这些设置
+        &lt;i>设置（弹出式对话框）：&lt;/i>您可以在短时间内覆盖默认设置。这些设置
         将在下一个应用程序开始迷失。点击红十字，您也可以将网站添加到白名单中。
         它们将被标记为“绿色检查图标”。这些网站将始终允许使用Javascript（甚至之后）
         重新启动应用程序）。要打开主设置屏幕，请单击弹出对话框底部的“设置”。&lt;br>
-        &lt; i]设置：&lt;/i>在设置中，您可以配置应用程序的行为，一些隐私和
-        安全设定。在应用程序启动时，将始终加载这些设置。</string>
+        &lt;i>设置：&lt;/i>在设置中，您可以配置应用程序的行为，一些隐私和安全设定。在应用程序启动时，将始终加载这些设置。</string>
 
     <string name="help_search_title">&lt;b>搜索:&lt;/b></string>
     <string name="help_search">
